name:                hois
version:             0.1.0.0
synopsis:            OIS bindings
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  C-sources:         cbits/OISEvents.cpp
                     cbits/OISFactoryCreator.cpp
                     cbits/OISInputManager.cpp
                     cbits/OISInterface.cpp
                     cbits/OISJoyStick.cpp
--                     cbits/OISKeyboard.cpp
                     cbits/OISMouse.cpp
                     cbits/OISMultiTouch.cpp
                     cbits/OISObject.cpp
--                     OISForceFeedback.cpp,
                     cbits/OISPrereqs.cpp

  extra-libraries: OIS

--  Includes:          OISEvents.h
--                     OISFactoryCreator.h
--                     OISInputManager.h
--                     OISInterface.h
--                     OISJoyStick.h
----                     OISKeyboard.h
--                     OISMouse.h
--                     OISMultiTouch.h
--                     OISObject.h
----                     OISForceFeedback.h,
--                     OISPrereqs.h
--
--  Install-includes:  OISEvents.h
--                     OISFactoryCreator.h
--                     OISInputManager.h
--                     OISInterface.h
--                     OISJoyStick.h
----                     OISKeyboard.h
--                     OISMouse.h
--                     OISMultiTouch.h
--                     OISObject.h
----                     OISForceFeedback.h,
--                     OISPrereqs.h

  exposed-modules:     OIS.OIS,
                       OIS.OISMultiTouch,
                       OIS.OISFactoryCreator,
--                       OIS.OISKeyboard,
                       OIS.Types,
                       OIS.OISInputManager,
                       OIS.OISObject,
                       OIS.OISJoyStick,
                       OIS.OISMouse,
                       OIS.OISEvents,
--                       OIS.OISForceFeedback,
                       OIS.OISPrereqs,
                       OIS.OISInterface
--  ghc-options: -pgml g++
  build-depends:       base ==4.5.*
